--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Okinawa 2026",
   "short_name": "Okinawa",
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#075985",
   "theme_color": "#075985",
   "icons": [
     {
-      "src": "https://img.icons8.com/color/512/shisa.png",
+      "src": "https://img.icons8.com/officel/512/shisa.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
