--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Okinawa 2026",
   "short_name": "Okinawa",
-  "start_url": "index.html",
+  "start_url": "./", 
   "display": "standalone",
   "background_color": "#075985",
   "theme_color": "#075985",
@@ -10,7 +10,7 @@
       "src": "https://img.icons8.com/officel/512/shisa.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
